--- a/TeamSeshMerchAppMaui/MainPage.xaml
+++ b/TeamSeshMerchAppMaui/MainPage.xaml
@@ -4,12 +4,10 @@
              xmlns:item="clr-namespace:TeamSeshMerchAppMaui"
              x:Class="TeamSeshMerchAppMaui.MainPage">
 
-    <Grid RowDefinitions="Auto,Auto,*" IsClippedToBounds="True">
-        <Button Grid.Row="0" x:Name="btnInput" Clicked="btnInput_Clicked">
-            <Button.Text>Input data</Button.Text>
-        </Button>
+    <Grid x:Name="viewGrid" RowDefinitions="Auto,Auto,*" ColumnDefinitions="*,*,*" IsClippedToBounds="True">
+        <Button Text="Fetch Data" Grid.Row="0" Grid.ColumnSpan="3" x:Name="btnInput" Clicked="btnInput_Clicked"/>
         <ActivityIndicator Grid.Row="2" Margin="80" x:Name="activity" Color="White"/>
-        <CollectionView Grid.Row="2" x:Name="albumCollection">
+        <CollectionView ItemsLayout="VerticalGrid, 2" Grid.Row="5" Grid.ColumnSpan="3" x:Name="albumCollection">
             <CollectionView.EmptyView>
                 <ContentView>
                     <StackLayout HorizontalOptions="CenterAndExpand"
@@ -25,56 +23,37 @@
             </CollectionView.EmptyView>
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="item:rssChannelItem" x:Name="dtaData">
-                    <Frame BackgroundColor="Red" WidthRequest="200" HeightRequest="800">
+                    <Frame Margin="2" Padding="0" CornerRadius="15" x:Name="frFrame">
                         <Frame.GestureRecognizers>
                             <TapGestureRecognizer x:Name="tapFrame" Tapped="tapFrame_Tapped"/>
                         </Frame.GestureRecognizers>
-                        <VerticalStackLayout>
-                            <Label>
-                                <Label.Text>
-                                    <Binding Path="titleField" />
-                                </Label.Text>
-                            </Label>
-                            <Label>
-                                <Label.Text>
-                                    <Binding Path="priceField" />
-                                </Label.Text>
-                            </Label>
-                            <Image >
-                                <Image.Source HeightRequest="100">
-                                    <Binding Path="linkField" />
-                                </Image.Source>
-                            </Image>
-                            <Image >
-                                <Image.Source HeightRequest="100">
-                                    <Binding Path="image_linkField" />
-                                </Image.Source>
-                            </Image>
-                            <Image >
-                                <Image.Source HeightRequest="100">
-                                    <Binding Path="additional_image_linkField" />
-                                </Image.Source>
-                            </Image>
-                            <Label>
-                                <Label.Text>
-                                    <Binding Path="mpnField" />
-                                </Label.Text>
-                            </Label>
-                            <Label>
-                                <Label.Text>
-                                    <Binding Path="conditionField" />
-                                </Label.Text>
-                            </Label>
-                            <Label>
-                                <Label.Text>
-                                    <Binding Path="availabilityField" />
-                                </Label.Text>
-                            </Label>
-                        </VerticalStackLayout>
+                        <Grid Margin="1" Padding="0">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="40" />
+                                <RowDefinition Height="40" />
+                                <RowDefinition Height="40" />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="560*" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <Image Source="{Binding image_linkField}"
+                               Aspect="AspectFill" Grid.Row="0" Grid.RowSpan="3" />
+                            <Label BackgroundColor="Black" Grid.Row="0" Grid.RowSpan="3" Opacity="0.6"/>
+                            <VerticalStackLayout Padding="5">
+                                <Label Grid.Row="0" HeightRequest="68" x:Name="lblTitle" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" FontSize="22" TextColor="White"
+                        Text="{Binding TextCut}"/>
+                                <Label Grid.Row="2" 
+                        Text="{Binding priceField}" HeightRequest="22" HorizontalOptions="CenterAndExpand" FontAttributes="Bold" FontSize="18"/>
+                                <Label Grid.Row="1" HeightRequest="20" HorizontalOptions="CenterAndExpand" TextColor="{Binding stockColor}"
+                        Text="{Binding availabilityField}" TextTransform="Uppercase" FontSize="15"/>
+                                
+                            </VerticalStackLayout>
+                        </Grid>
                     </Frame>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
     </Grid>
-
 </ContentPage>
