--- a/TeamSeshMerchAppMaui/MainPage.xaml
+++ b/TeamSeshMerchAppMaui/MainPage.xaml
@@ -4,13 +4,17 @@
              xmlns:item="clr-namespace:TeamSeshMerchAppMaui"
              x:Class="TeamSeshMerchAppMaui.MainPage">
 
-    <Grid x:Name="viewGrid" RowDefinitions="Auto,*,*" ColumnDefinitions="*,*,*" IsClippedToBounds="True" BackgroundColor="Black">
-        <Button Text="Fetch Data"  Grid.Row="0" Grid.ColumnSpan="3" x:Name="btnInput" Clicked="btnInput_Clicked"/>
-        <HorizontalStackLayout >
-            <Button Text="Filter" Clicked="btnFilter_Clicked" x:Name="btnFilter"/>
+    <Grid x:Name="viewGrid"  RowDefinitions="Auto,*,*" ColumnDefinitions="*,*,*" IsClippedToBounds="True" BackgroundColor="Black">
+        <HorizontalStackLayout Grid.Row="0" Grid.ColumnSpan="4" BackgroundColor="Black"  HorizontalOptions="CenterAndExpand">
+            <ImageButton HeightRequest="20" WidthRequest="30" Clicked="btnInput_Clicked"  Source="fetch.png"/>
+            <ImageButton HeightRequest="30" WidthRequest="40" Clicked="btnFilter_Clicked" Source="moneyfilter.png" />
+            <HorizontalStackLayout>
+                <Label TextColor="White" TranslationX="27" VerticalOptions="Center" x:Name="producNumber" Text="25" FontSize="12" TranslationY="3"></Label>
+                <ImageButton Source="bag.png" x:Name="btnBag" Clicked="btnBag_Clicked" HeightRequest="30" WidthRequest="40"></ImageButton>
+            </HorizontalStackLayout>
+            <Picker SelectedIndexChanged="grStock_SelectedIndexChanged" Title="🝖"  Margin="5,0,0,0" FontSize="22" TitleColor="White" x:Name="grStock"/>
         </HorizontalStackLayout>
-        <ActivityIndicator Grid.Row="2" Margin="80" x:Name="activity" Color="White"/>
-        <CarouselView Grid.Row="1" x:Name="carousel" Grid.ColumnSpan="3">
+        <CarouselView IsBounceEnabled="True" Grid.Row="1" x:Name="carousel" Grid.ColumnSpan="3">
             <CarouselView.ItemTemplate>
                 <DataTemplate>
                     <StackLayout>
@@ -74,15 +78,43 @@
                                 <Label Grid.Row="0" HeightRequest="68" x:Name="lblTitle" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" FontSize="22" TextColor="White"
                         Text="{Binding titleField}"/>
                                 <Label Grid.Row="2" 
-                        Text="{Binding priceField}" HeightRequest="22" HorizontalOptions="CenterAndExpand" FontAttributes="Bold" FontSize="18"/>
-                                <Label Grid.Row="1" HeightRequest="20" HorizontalOptions="CenterAndExpand" TextDecorations="Underline" FontAttributes="Bold" TextColor="{Binding stockColor}"
+                        Text="{Binding priceField}" HeightRequest="22" HorizontalOptions="CenterAndExpand" FontAttributes="Bold" FontSize="18" TextColor="White"/>
+                                <Label Grid.Row="1" HeightRequest="20" HorizontalOptions="CenterAndExpand"  TextDecorations="Underline" FontAttributes="Bold" TextColor="{Binding stockColor}"
                         Text="{Binding availabilityField}" TextTransform="Uppercase" FontSize="15"/>
-                                
                             </VerticalStackLayout>
                         </Grid>
                     </Frame>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
+
+        <AbsoluteLayout IsVisible="false" x:Name="absLayout" Grid.Row="5" Grid.ColumnSpan="3" HeightRequest="220" WidthRequest="400" Margin="0,230,0,0">
+            <BoxView Color="Black"
+             CornerRadius="40"
+             WidthRequest="400"
+             HeightRequest="220"
+             VerticalOptions="End"
+             HorizontalOptions="Center" >
+            </BoxView>
+            
+            <Grid Padding="15" WidthRequest="400" Margin="0,25,0,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="70" />
+                    <RowDefinition Height="70" />
+                    <RowDefinition Height="70" />
+                </Grid.RowDefinitions>
+                <FlexLayout HorizontalOptions="Center" Direction="Column" Grid.Row="0" Grid.RowSpan="3" AlignContent="Center" AlignItems="Center" FlowDirection="LeftToRight">
+                    <HorizontalStackLayout>
+                        <Entry HorizontalTextAlignment="Center" FontSize="20" Keyboard="Numeric" BackgroundColor="White" TextColor="Black" Margin="0,0,15,0" Placeholder="Min Price" x:Name="minPrice"></Entry>
+                        <Entry HorizontalTextAlignment="Center" FontSize="20" Keyboard="Numeric" BackgroundColor="White" TextColor="Black" Placeholder="Max Price" x:Name="maxPrice"></Entry>
+                    </HorizontalStackLayout>
+                    <VerticalStackLayout >
+                        <Button WidthRequest="270" FontSize="17" Text="show items" Margin="0,10,0,0" Clicked="Button_Clicked"></Button>
+                        <Button WidthRequest="240" Text="reset products" Margin="0,10,0,0" x:Name="btnReset" Clicked="btnReset_Clicked"></Button>
+                    </VerticalStackLayout>
+                </FlexLayout>
+            </Grid>
+        </AbsoluteLayout>
+        <ActivityIndicator Grid.RowSpan="4" Grid.ColumnSpan="5" x:Name="activity" Color="White"/>
     </Grid>
 </ContentPage>
