--- a/TeamSeshMerchAppMaui/MainPage.xaml
+++ b/TeamSeshMerchAppMaui/MainPage.xaml
@@ -4,14 +4,12 @@
              xmlns:item="clr-namespace:TeamSeshMerchAppMaui"
              x:Class="TeamSeshMerchAppMaui.MainPage">
 
-    <Grid x:Name="viewGrid"  RowDefinitions="Auto,*,*" ColumnDefinitions="*,*,*" IsClippedToBounds="True" BackgroundColor="Black">
-        <HorizontalStackLayout Grid.Row="0" Grid.ColumnSpan="4" BackgroundColor="Black"  HorizontalOptions="CenterAndExpand">
+    <Grid x:Name="viewGrid" RowDefinitions="Auto,*,*" ColumnDefinitions="*,*,*" IsClippedToBounds="True" BackgroundColor="Black">
+        <HorizontalStackLayout  Grid.Row="0" Grid.ColumnSpan="4" BackgroundColor="Black"  HorizontalOptions="CenterAndExpand">
             <ImageButton HeightRequest="20" WidthRequest="30" Clicked="btnInput_Clicked"  Source="fetch.png"/>
-            <ImageButton HeightRequest="30" WidthRequest="40" Clicked="btnFilter_Clicked" Source="moneyfilter.png" />
-            <HorizontalStackLayout>
-                <Label TextColor="White" TranslationX="27" VerticalOptions="Center" x:Name="producNumber" Text="25" FontSize="12" TranslationY="3"></Label>
-                <ImageButton Source="bag.png" x:Name="btnBag" Clicked="btnBag_Clicked" HeightRequest="30" WidthRequest="40"></ImageButton>
-            </HorizontalStackLayout>
+            <ImageButton HeightRequest="25" Margin="0,0,11,0" WidthRequest="40" Clicked="btnFilter_Clicked" Source="moneyfilter.png" />
+            <Label TextColor="White" Margin="0,0,-27,0" VerticalOptions="Center" x:Name="producNumber" Text="25" FontSize="12" TranslationY="3"></Label>
+            <ImageButton Source="bag.png" x:Name="btnBag" Clicked="btnBag_Clicked" HeightRequest="30" WidthRequest="40"></ImageButton>
             <Picker SelectedIndexChanged="grStock_SelectedIndexChanged" Title="🝖"  Margin="5,0,0,0" FontSize="22" TitleColor="White" x:Name="grStock"/>
             <ImageButton HeightRequest="20" WidthRequest="40" Clicked="btnSource_Clicked" x:Name="btnSource" Source="src.png" />
         </HorizontalStackLayout>
@@ -23,10 +21,10 @@
                             <Frame.GestureRecognizers>
                                 <TapGestureRecognizer x:Name="tapFrame" Tapped="tapFrame_Tapped"/>
                             </Frame.GestureRecognizers>
-                            <Grid Padding="0">
+                            <Grid WidthRequest="550" HeightRequest="480" Padding="0">
                                 <Image Source="{Binding image_linkField}" Scale="1.2"
                                Aspect="AspectFill" Grid.Row="0" Grid.RowSpan="2" TranslationX="0" TranslationY="-50"/>
-                                <VerticalStackLayout x:Name="stckCol" HeightRequest="250" HorizontalOptions="Center" VerticalOptions="Start">
+                                <VerticalStackLayout x:Name="stckCol" HeightRequest="250" HorizontalOptions="Center" VerticalOptions="Start" TranslationY="20">
                                     <Label FontAutoScalingEnabled="True" BackgroundColor="Black" x:Name="lblTitle" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" FontSize="18" VerticalTextAlignment="Center" TextColor="White"
                         Text="{Binding titleField}"/>
                                     <Label
