--- a/TeamSeshMerchAppMaui/DetailPage.xaml
+++ b/TeamSeshMerchAppMaui/DetailPage.xaml
@@ -3,10 +3,25 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TeamSeshMerchAppMaui.DetailPage"
              xmlns:item="clr-namespace:TeamSeshMerchAppMaui"
-             Title="DetailPage"
+             Title=""
              Shell.NavBarIsVisible="True">
     <Grid RowDefinitions="Auto,Auto,*" IsClippedToBounds="True">
-
+        <CarouselView IsBounceEnabled="True" Grid.Row="1" HeightRequest="300" x:Name="crsImages" Grid.ColumnSpan="3" Loop="True">
+            <CarouselView.ItemTemplate>
+                <DataTemplate>
+                    <Frame WidthRequest="350" HeightRequest="300" CornerRadius="0" x:Name="frFrame">
+                        <Grid Margin="0" WidthRequest="350" HeightRequest="300" Padding="0">
+                            <Image Source="{Binding}"
+                               Aspect="AspectFill" Grid.Row="0" Grid.RowSpan="2"/>
+                        </Grid>
+                    </Frame>
+                </DataTemplate>
+            </CarouselView.ItemTemplate>
+        </CarouselView>
+        <HorizontalStackLayout HorizontalOptions="Center" Grid.Row="1" Grid.ColumnSpan="5">
+            <Button Text="&#x3C;" x:Name="skipBack" VerticalOptions="Center" Clicked="skipBack_Clicked" TextColor="DarkSlateGray" BackgroundColor="LightGray" Padding="0,0,0,0" Margin="0,0,290,0" WidthRequest="24" FontSize="21" FontAttributes="Bold" ></Button>
+            <Button Text="&#62;" x:Name="skipFrwd" VerticalOptions="Center" Clicked="skipFrwd_Clicked" TextColor="DarkSlateGray" BackgroundColor="LightGray" Padding="0,0,0,0" WidthRequest="24" FontSize="21" FontAttributes="Bold"></Button>
+        </HorizontalStackLayout>
         <CollectionView Grid.Row="2" x:Name="albumCollection">
             <CollectionView.EmptyView>
                 <ContentView>
@@ -23,56 +38,43 @@
             </CollectionView.EmptyView>
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="item:rssChannelItem" x:Name="dtaData">
-                    <VerticalStackLayout>
-                        <Label>
-                            <Label.Text>
-                                <Binding Path="titleField" />
-                            </Label.Text>
-                        </Label>
-                        <Label>
-                            <Label.Text>
-                                <Binding Path="descriptionField" />
-                            </Label.Text>
-                        </Label>
-                        <Label>
-                            <Label.Text>
-                                <Binding Path="priceField" />
-                            </Label.Text>
-                        </Label>
-                        <Label>
-                            <Label.Text>
-                                <Binding Path="linkField" />
-                            </Label.Text>
-                        </Label>
-                        <Label>
-                            <Label.Text>
-                                <Binding Path="image_linkField" />
-                            </Label.Text>
-                        </Label>
-                        <Label>
-                            <Label.Text>
-                                <Binding Path="additional_image_linkField" />
-                            </Label.Text>
-                        </Label>
-                        <Label>
-                            <Label.Text>
-                                <Binding Path="mpnField" />
-                            </Label.Text>
-                        </Label>
-                        <Label>
-                            <Label.Text>
-                                <Binding Path="conditionField" />
-                            </Label.Text>
-                        </Label>
-                        <Label>
-                            <Label.Text>
-                                <Binding Path="availabilityField" />
-                            </Label.Text>
-                        </Label>
-
+                    <VerticalStackLayout Margin="0,0,0,50">
+                        <VerticalStackLayout Margin="10">
+                            <FlexLayout x:Name="flex" HeightRequest="52" WidthRequest="320" Direction="Row" AlignItems="Start" JustifyContent="SpaceBetween">
+                                <Label FontSize="20" WidthRequest="210">
+                                    <Label.Text>
+                                        <Binding Path="titleField" />
+                                    </Label.Text>
+                                </Label>
+                                <VerticalStackLayout>
+                                    <Label FontSize="20">
+                                        <Label.Text>
+                                            <Binding Path="priceField" />
+                                        </Label.Text>
+                                    </Label>
+                                    <Label FontSize="13">
+                                        <Label.Text>
+                                            <Binding Path="availabilityField" />
+                                        </Label.Text>
+                                    </Label>
+                                </VerticalStackLayout>
+                            </FlexLayout>
+                            <Frame Margin="0,7,0,0">
+                                <Label TextColor="Black" TextTransform="Uppercase">
+                                    <Label.Text>
+                                        <Binding Path="descriptionField"/>
+                                    </Label.Text>
+                                </Label>
+                            </Frame>
+                        </VerticalStackLayout>
                     </VerticalStackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
+        <VerticalStackLayout Grid.Row="3" VerticalOptions="End" >
+            <Button Text="VISIT SITE" x:Name="visitSite" BackgroundColor="Black" BorderWidth="1" WidthRequest="350" TextColor="White" 
+                    Margin="2" CornerRadius="15" Clicked="visitSite_Clicked">
+            </Button>
+        </VerticalStackLayout>
     </Grid>
 </ContentPage>
