--- a/TeamSeshMerchAppMaui/DetailPage.xaml
+++ b/TeamSeshMerchAppMaui/DetailPage.xaml
@@ -4,7 +4,7 @@
              x:Class="TeamSeshMerchAppMaui.DetailPage"
              xmlns:item="clr-namespace:TeamSeshMerchAppMaui"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             Title=""
+             Title="My favorites"
              Shell.NavBarIsVisible="True">
     <ContentPage.Behaviors>
         <toolkit:StatusBarBehavior StatusBarColor="#131212" StatusBarStyle="LightContent" />
